--- a/_posts/2025-10-28-shenxia.md
+++ b/_posts/2025-10-28-shenxia.md
@@ -25,7 +25,7 @@ tags:
 
 “未必。也许我把这件事情想复杂了，这难道不只是为了追求幸福吗？那我又在等待什么呢？其实不然……”猫喜欢多想，因为想多了不仅可以解决心中的疑虑，有时还可以解释祂所见之猫的愚蠢，不用说话就能发泄情感，何乐而不为。
 
----
+
 
 “其实不然……”不知何处发出的声音，但猫没有理睬，仍然低头沉思。“我知道您压根不在意这些。据我了解，想必您就是写下著名神下教经书《青叶》、《美心》的作者斐利尔吧。”
 
@@ -47,5 +47,6 @@ tags:
 
 在最后的深度，平庸的游离率开始生效，粉红色的泡泡幻化成珊瑚的尖刺，黑白色的礼服凝固成墓碑的剪影。每一寸向前的移动，都撕裂着对世界的眷恋。每一分美的获得，都以彻底失去为代价。海水合拢。没有涟漪。以至于这个崇高的世界，穷尽了整个天命时，也未能再找到祂。
 
-*2025年8月30日初稿
-2025年10月26日定稿*
+*2025年8月30日初稿*
+
+*2025年10月26日定稿*
